<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.algart</groupId>
    <artifactId>algart</artifactId>
    <version>1.5.1</version>
    <!--
    Please remember that you Arrays.SystemSettings.VERSION constant must be equal to this value!
    This condition is checked automatically in the "release-maven-central" profile below.
    -->

    <name>AlgART Java Libraries</name>
    <description>Open-source Java libraries, supporting generalized smart arrays and matrices with elements
        of any types, including a wide set of 2D-, 3D- and multidimensional image processing
        and other algorithms, working with arrays and matrices.
    </description>
    <url>https://algart.net/java/AlgART/</url>

    <licenses>
        <license>
            <name>The MIT License (MIT)</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Daniel Alievsky</name>
            <email>daniel@iskrael.org</email>
            <organization>AlgART laboratory</organization>
            <organizationUrl>https://algart.net</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/Daniel-Alievsky/algart.git</connection>
        <developerConnection>scm:git:https://github.com/Daniel-Alievsky/algart.git</developerConnection>
        <url>https://github.com/Daniel-Alievsky/algart.git</url>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
    </properties>

    <!-- You may uncomment the following dependence for testing file writing, for example, WriteDemoImageTest -->
    <!--    <dependencies>-->
    <!--        <dependency>-->
    <!--            <groupId>com.github.jai-imageio</groupId>-->
    <!--            <artifactId>jai-imageio-jpeg2000</artifactId>-->
    <!--            <version>1.4.0</version>-->
    <!--        </dependency>-->
    <!--    </dependencies>-->

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <!-- Signing JARs by GnuPG (requirement of Maven Central) -->
            <!-- Please ACTIVATE this profile before deployment! -->
            <id>release-maven-central</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <id>test-version</id>
                                <phase>test</phase>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                                <configuration>
                                    <target>
                                        <echo level="info"/>
                                        <java classname="net.algart.executable.verifier.CheckAlgARTVersion"
                                              fork="true" failonerror="true">
                                            <!-- See https://ant.apache.org/manual/Tasks/java.html -->
                                            <classpath refid="maven.compile.classpath"/>
                                            <arg value="${project.version}"/>
                                        </java>
                                        <echo level="info"/>
                                    </target>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.11.2</version>
                        <configuration>
                            <release>${maven.compiler.release}</release>
                            <encoding>UTF-8</encoding>
                            <doclint>none</doclint>
                            <excludePackageNames>
                                net.algart.executable.*
                            </excludePackageNames>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadoc</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.8</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.8.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <distributionManagement>
                <repository>
                    <id>central</id>
                    <name>Central Publishing Portal Releases</name>
                    <url>https://central.sonatype.com/api/v1/publisher/upload</url>
                </repository>
                <snapshotRepository>
                    <id>central</id>
                    <name>Central Publishing Portal Snapshots</name>
                    <url>https://central.sonatype.com/api/v1/publisher/upload</url>
                </snapshotRepository>
            </distributionManagement>
        </profile>
    </profiles>
</project>